apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - adguard.tmem.de
      secretName: adguard-tls
  rules:
    - host: adguard.tmem.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3000
